package AttackLogic;

import Charactor.BasePlayer;

public interface Attackable {
    void attack(BasePlayer enemy);
}
