package AttackLogic;

import Charactor.BasePlayer;

public class FireAttack implements Attackable {

    @Override
    public void attack(BasePlayer enemy) {}
}
