package AttackLogic;

import Charactor.BasePlayer;

public class WindAttack implements Attackable {

    @Override
    public void attack(BasePlayer enemy) {}
}
