@startuml 01_overview
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFBFF
skinparam class {
  BackgroundColor #EEF3FF
  BorderColor #3A5CC5
  HeaderBackgroundColor #84a0f6
  FontColor #FFFFFF
  ArrowColor #2255AA
  AttributeFontColor #222222
}
skinparam package {
  BackgroundColor #F4F7FF
  BorderColor #AAB8E0
}
skinparam note {
  BackgroundColor #FFF9E6
  BorderColor #C8A800
}

title <b>ProgmethFinalProject – Full Class Overview</b>

package "Application" {
  class Main
  class Controller
  class Projectile
  class GameRenderer
  class CharacterSelectScene
  class HandleInput
}

package "Charactor" {
  abstract class BasePlayer {
    - maxHp : int
    - hp : int
    - sprite : Image
    + {abstract} ability() : void
    + {abstract} getName() : String
    + {abstract} getAbilityLabel() : String
    + {abstract} getSpritePath() : String
    + isPerfectAimReady() : boolean
    + decreaseHp(damage : int)
  }
  class DogPlayer
  class CatPlayer
}

package "AttackLogic" {
  interface Attackable {
    + attack(enemy : BasePlayer) : void
  }
  class NormalAttack
  class FireAttack
  class IceAttack
  class WindAttack
}

DogPlayer --|> BasePlayer
CatPlayer --|> BasePlayer

NormalAttack ..|> Attackable
FireAttack   ..|> Attackable
IceAttack    ..|> Attackable
WindAttack   ..|> Attackable

Main          --> Controller           : creates >
Main          --> CharacterSelectScene : creates >
Main          --> GameRenderer         : creates >
Controller    o-- BasePlayer           : p1, p2
Controller    o-- Projectile
Controller    o-- Attackable           : selectedAttack
CharacterSelectScene --> BasePlayer    : returns >
HandleInput   --> Controller           : delegates >
GameRenderer  --> Controller           : reads >

@enduml
